--- a/WebContent/main/chart.css
+++ b/WebContent/main/chart.css
@@ -27,7 +27,7 @@ a {
 	border: solid 1px gray;
 	overflow-y: scroll;
 	width:300px; 
-	height:820px;
+	height:851px;
 	background-color: #D9D9D9;
 }
 .chartWrap > #chartMenu {	
@@ -208,11 +208,39 @@ a {
 	top: 30;	
 	left: 301px;
 	background-color:#FFFFFF;
-	border: 1px solid #000000;
+	border: 1px solid gray;
 	box-sizing: border-box;
-	z-index: 3;
-    	 
+	z-index: 3;    	 
 }
 
+#waitingList {
+	width: 210.6mm;
+	height: 30px;		 
+	position: absolute;
+	top: 0;
+	left: 301px;
+	background-color:#7AC3CC;    	 
+}
+#mainView {	
+	width: 210mm;
+	height: 297mm;	
+	border: solid 1px gray;
+	position: absolute;
+	top: 60px;
+	left: 301px;
+	z-index: 1;
+}	 
+#mainView img {
+	width: 100%;
+	height: 100%;		
+}	 
+ 
+#canvas {			 
+	background-color: rgba(255, 255, 255, 0); 
+		position: absolute; 
+		top: 31px;
+		left: 301px;
+		z-index: 2;  
+}
 
  
